[package]
name = "my-no-sql-entities"
version = "0.1.0"
edition = "2024"

[dependencies]
service-sdk = { tag = "0.4.2", git = "https://github.com/MyJetTools/service-sdk.git", features = [
    "macros",
    "my-nosql-sdk",
] }


trading-robot-common = { tag = "0.1.0", git = "https://github.com/my-trading-robot/trading-robot-common.git" }

serde = { version = "*", features = ["derive"] }
